[package]
name = "meos-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "meos"

[dependencies]
libc = "0.2.153"
meos-sys = { path = "../meos-sys" }
thiserror = "1"

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
clap = { version = "4", features = ["derive"] }
