[package]
name = "polars-example"
version = "0.1.0"
edition = "2021"

[dependencies]
meos-rs = { path = "../.." }
meos-sys = { path = "../../meos-sys" }

polars = { version = "x", features = ["lazy", "strings", "concat_str", "regex"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
